Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.5.2 (??/??/????):
	libpurple:
	* Restored the "Has You" feature to the MSN protocol tooltips.
	* Fixed a crash on removing a custom buddy icon on a buddy.
	* Fixed a crash caused by certain self-signed SSL certificates.

	Pidgin:
	* The status selector now saves your message when changing status.
	* Fix a case where a conversation window could close unexpectedly.
	* A mute sounds option has been added to the preferences window to
	  help with discoverability.  CTRL+S is no longer bound to mute.
	* Added ability to change the color of visited links (using the theme
	  control plugin, or setting the color in ~/.gtkrc-2.0)

	Finch:
	* A new 'Nested Grouping' option in the 'Grouping' plugin. Group
	  hierarchies are defined by the '/' character in the group names
	* A bug was fixed where some key-bindings wouldn't work with some TERMs
	  (e.g. xterm-color, screen-linux etc.)

	XMPP:
	* Sending and receiving custom smileys using the specification in
	  XEP-0231 (bits of binary) and XHTML-IM

version 2.5.1 (08/30/2008):
	libpurple:
	* In the Join/Part plugin, add the ability to apply the rules to
	  buddies.  By default, joins and parts for buddies are still shown.
	* Support SOCKS proxies specified in GNOME or Windows proxy settings.
	* Fix some possible crashes in MSNP15.
	* Enable a default SSL trust relationship for MSN servers.
	* Avoid disconnecting from XMPP servers on parse errors that are
	  non-fatal.
	* Include some perl files that were mistakenly omitted in 2.5.0.

	Pidgin:
	* Prevent use of custom smilies without "shortcuts."
	* Fix a crash that could appear with AIM buddy tooltips.

	Artwork:
	* General refresh of many icons in the interface.
	* Many cleanups to artwork source are now included in the distribution.
	* A new "throbber" animation has been added to indicate when accounts
	  are connecting.

version 2.5.0 (08/18/2008):
	libpurple: